// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordWithmeter component renders with no props 1`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="password-with-meter"
  >
    <Choice
      checked={false}
      className="password-with-meter--show-password ds-u-float--right"
      inputPlacement="left"
      name="show password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="Show password"
    >
      Show password
    </Choice>
    <TextField
      className="no-clearfix"
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value=""
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength="empty"
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      <span>
         
      </span>
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 1`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="password-with-meter"
  >
    <Choice
      checked={false}
      className="password-with-meter--show-password ds-u-float--right"
      inputPlacement="left"
      name="show password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="Show password"
    >
      Show password
    </Choice>
    <TextField
      className="no-clearfix"
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="a"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={0}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Weak
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 2`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="password-with-meter"
  >
    <Choice
      checked={false}
      className="password-with-meter--show-password ds-u-float--right"
      inputPlacement="left"
      name="show password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="Show password"
    >
      Show password
    </Choice>
    <TextField
      className="no-clearfix"
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="abCD"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={1}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Weak
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 3`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="password-with-meter"
  >
    <Choice
      checked={false}
      className="password-with-meter--show-password ds-u-float--right"
      inputPlacement="left"
      name="show password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="Show password"
    >
      Show password
    </Choice>
    <TextField
      className="no-clearfix"
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="abCD321"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={2}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Weak
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 4`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="password-with-meter"
  >
    <Choice
      checked={false}
      className="password-with-meter--show-password ds-u-float--right"
      inputPlacement="left"
      name="show password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="Show password"
    >
      Show password
    </Choice>
    <TextField
      className="no-clearfix"
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="abCD321!,"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={3}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Good
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 5`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="password-with-meter"
  >
    <Choice
      checked={false}
      className="password-with-meter--show-password ds-u-float--right"
      inputPlacement="left"
      name="show password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="Show password"
    >
      Show password
    </Choice>
    <TextField
      className="no-clearfix"
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="abCD321!,@_"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={4}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Great
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component shows the password 1`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="password-with-meter"
  >
    <Choice
      checked={true}
      className="password-with-meter--show-password ds-u-float--right"
      inputPlacement="left"
      name="show password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="Show password"
    >
      Show password
    </Choice>
    <TextField
      className="no-clearfix"
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      label="Password"
      name="password"
      onChange={[Function]}
      type="text"
      value="abcd1234"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={0}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Weak
    </p>
  </div>
</div>
`;
